# GDCrypto

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yml  merge.py
Bindings/C/: CheckTest.c  GDCrypto.h
Examples/: Benchmark.hpp  CipherExample.cpp  DataExample.cpp
Include/: GDCrypto.h  GDCrypto.hpp  zconf.h
Include/GDCrypto/: CheckGenerator.hpp  DataCipher.hpp  Export.hpp  Keys.hpp  RobTopCipher.hpp  Salts.hpp  Utility.hpp
Source/: AES.c  AES.h  AES.hpp  Base64.cpp  CAPI.cpp  CAPI.hpp  CheckGenerator.cpp  DataCipher.cpp  GDCrypto.cpp  RobTopCipher.cpp  Sha1.cpp  Utility.cpp  ZlibHelper.cpp  ZlibHelper.hpp
Tests/: CheckTest.cpp  CipherTest.c  CipherTest.cpp  DataTest.cpp
examples/: decoding.cpp  encoding.cpp  savegame.cpp
include/: base64.hpp  gdcrypto.hpp  sha1.hpp
include/zlib/: zlib.h
src/: base64.cpp  gdcrypto.cpp  sha1.cpp
